Add 'Scanning the stack with frame_descr' slide
Clarify the stack scanning technique

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 
 /presentation/src/ocaml/domain_state.h
 /presentation/src/ocaml/domain_state_abbr.h
+/presentation/src/ocaml/domain_state_backtrace.h
 
 
 /src/**/*.annot
